--- a/3wideresnet-seedgen.ipynb
+++ b/3wideresnet-seedgen.ipynb
@@ -23,7 +23,7 @@
    ],
    "source": [
     "import os\n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] = '2'\n",
+    "os.environ['CUDA_VISIBLE_DEVICES'] = '3'\n",
     "\n",
     "\n",
     "from torchvision import models\n",
@@ -31,7 +31,7 @@
     "print(model_names)\n",
     "# 사전 학습된 모델 로드\n",
     "\n",
-    "OUTFILE1 = './seed2/resnext_submit_seed_'\n",
+    "OUTFILE1 = './seed3/wideresnet_submit_seed_'\n",
     "OUTFILE2 = '.csv'\n"
    ]
   },
@@ -71,7 +71,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 42%|████████████████▎                      | 209/500 [51:57<1:12:26, 14.94s/it]"
+      "100%|███████████████████████████████████████| 500/500 [1:32:41<00:00, 11.12s/it]\n",
+      "100%|█████████████████████████████████████████████| 7/7 [00:04<00:00,  1.59it/s]\n",
+      "100%|█████████████████████████████████████████████| 4/4 [00:02<00:00,  1.81it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1,1,0,1,1,1,1,0,1,1,0,1,0,1,1,1,1,1,1,1,1,1,1,0,1,1,1,1,1,1,1,1,1,1,1,0,1,0,1,1,1,1,0,1,1,0,0,1,1,1,1,1,1,1,0,1,1,1,0,0,1,1,1,1,0,1,1,1,0,1,1,1,0,1,1,0,0,1,1,1,1,1,1,0,1,0,1,0,1,0,1,1,1,1,1,1,1,1,1,1,"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 63%|█████████████████████████▋               | 314/500 [58:42<37:13, 12.01s/it]"
      ]
     }
    ],
@@ -90,7 +106,7 @@
     "    \n",
     "for seed in range(8,80):\n",
     "    seed_everything(seed) # Seed 고정\n",
-    "    model = models.resnext101_32x8d(pretrained=True)\n",
+    "    model = models.wide_resnet101_2(pretrained=True)\n",
     "    # 데이터 로딩 클래스 정의\n",
     "    class TrainDataset(Dataset):\n",
     "        def __init__(self, csv_file, transform=None):\n",
@@ -169,8 +185,8 @@
     "            optimizer.step()\n",
     "\n",
     "\n",
-    "    torch.save(model.state_dict(), './bigdata/rsn_model/resnext_model.pth')     \n",
-    "    model.load_state_dict(torch.load('./bigdata/rsn_model/resnext_model.pth'))\n",
+    "    torch.save(model.state_dict(), './bigdata/rsn_model/wideresnet_model.pth')     \n",
+    "    model.load_state_dict(torch.load('./bigdata/rsn_model/wideresnet_model.pth'))\n",
     "    model.classifier  = nn.Identity()  # 마지막 레이어를 Identity로 설정하여 임베딩 출력\n",
     "\n",
     "\n",
