--- a/2EfficientNetV2-seedgen_twotrack.ipynb
+++ b/2EfficientNetV2-seedgen_twotrack.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/leadawon5/gitfiles/venvs/vpvenv/lib/python3.7/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -31,13 +23,13 @@
     "print(model_names)\n",
     "# 사전 학습된 모델 로드\n",
     "\n",
-    "OUTFILE1 = './seed2/resnext_submit_seed_'\n",
+    "OUTFILE1 = './seed4/ft_efficientnet_v2_m_submit_seed_'\n",
     "OUTFILE2 = '.csv'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +63,71 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 42%|████████████████▎                      | 209/500 [51:57<1:12:26, 14.94s/it]"
+      "100%|███████████████████████████████████████| 500/500 [2:28:01<00:00, 17.76s/it]\n",
+      "100%|█████████████████████████████████████████████| 7/7 [00:04<00:00,  1.42it/s]\n",
+      "100%|█████████████████████████████████████████████| 4/4 [00:02<00:00,  1.67it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1,1,0,0,0,0,0,0,0,1,0,0,0,0,0,1,0,0,0,0,0,0,1,0,0,0,1,0,0,1,1,1,0,0,1,0,1,0,0,1,0,0,0,0,0,0,0,1,0,0,0,0,0,1,0,1,0,1,0,0,0,0,0,1,0,0,1,0,0,1,0,0,0,0,1,0,0,1,0,1,1,1,0,0,0,0,1,0,1,1,1,1,1,1,1,0,0,0,0,1,"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████| 500/500 [2:28:40<00:00, 17.84s/it]\n",
+      "100%|█████████████████████████████████████████████| 7/7 [00:04<00:00,  1.49it/s]\n",
+      "100%|█████████████████████████████████████████████| 4/4 [00:02<00:00,  1.77it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1,1,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,1,1,1,0,1,1,0,0,1,0,1,0,0,0,0,0,0,0,1,0,0,0,0,0,1,0,1,0,0,0,0,0,0,0,1,0,0,1,0,0,1,0,0,1,0,1,0,0,1,0,1,0,1,0,0,0,1,0,0,1,0,1,1,1,1,1,0,0,0,0,1,"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████| 500/500 [2:30:04<00:00, 18.01s/it]\n",
+      "100%|█████████████████████████████████████████████| 7/7 [00:04<00:00,  1.46it/s]\n",
+      "100%|█████████████████████████████████████████████| 4/4 [00:02<00:00,  1.83it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,1,1,0,1,1,0,0,0,0,1,0,0,0,0,0,0,0,1,0,0,0,0,0,1,0,1,0,0,0,0,0,0,0,1,0,0,0,0,0,1,0,0,0,0,1,0,0,1,0,0,0,1,0,0,0,0,0,0,1,0,1,1,1,1,1,0,0,0,0,1,"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████| 500/500 [2:28:24<00:00, 17.81s/it]\n",
+      "100%|█████████████████████████████████████████████| 7/7 [00:05<00:00,  1.35it/s]\n",
+      "100%|█████████████████████████████████████████████| 4/4 [00:02<00:00,  1.79it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1,1,0,0,0,0,0,0,0,1,0,0,0,0,0,1,0,1,0,0,0,0,1,0,0,0,1,0,0,1,1,1,1,1,1,0,0,0,0,1,0,0,0,0,0,0,0,1,0,0,0,1,0,1,0,1,0,0,0,0,0,0,0,1,0,0,0,0,0,1,0,0,0,0,1,0,0,1,0,1,1,1,0,0,0,0,1,0,1,1,1,1,1,1,1,0,0,0,0,1,"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 84%|████████████████████████████████▊      | 420/500 [2:03:18<23:37, 17.72s/it]"
      ]
     }
    ],
@@ -88,9 +144,9 @@
     "    \n",
     "    \n",
     "    \n",
-    "for seed in range(8,80):\n",
+    "for seed in range(73,80):\n",
     "    seed_everything(seed) # Seed 고정\n",
-    "    model = models.resnext101_32x8d(pretrained=True)\n",
+    "    model = models.efficientnet_b7(pretrained=True)\n",
     "    # 데이터 로딩 클래스 정의\n",
     "    class TrainDataset(Dataset):\n",
     "        def __init__(self, csv_file, transform=None):\n",
@@ -144,11 +200,16 @@
     "\n",
     "\n",
     "    train_data = TrainDataset(csv_file='./bigdata/train.csv', transform=transform)\n",
-    "    train_loader = DataLoader(train_data, batch_size=16, shuffle=False)\n",
+    "    train_loader = DataLoader(train_data, batch_size=4, shuffle=False)\n",
     "\n",
     "    # 출력 레이어 수정\n",
-    "    num_ftrs = model.fc.in_features\n",
-    "    model.fc = nn.Linear(num_ftrs, 2)  # 이진 분류를 위한 출력 크기로 변경\n",
+    "    num_ftrs = model.classifier[1].in_features\n",
+    "\n",
+    "    # 이진 분류를 위한 출력 크기로 변경\n",
+    "    model.classifier = nn.Sequential(\n",
+    "        nn.Dropout(0.2),\n",
+    "        nn.Linear(num_ftrs, 2)\n",
+    "    )\n",
     "\n",
     "    model = model.to('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "\n",
@@ -169,8 +230,8 @@
     "            optimizer.step()\n",
     "\n",
     "\n",
-    "    torch.save(model.state_dict(), './bigdata/rsn_model/resnext_model.pth')     \n",
-    "    model.load_state_dict(torch.load('./bigdata/rsn_model/resnext_model.pth'))\n",
+    "    torch.save(model.state_dict(), './bigdata/rsn_model/efnet_tt_model.pth')     \n",
+    "    model.load_state_dict(torch.load('./bigdata/rsn_model/efnet_tt_model.pth'))\n",
     "    model.classifier  = nn.Identity()  # 마지막 레이어를 Identity로 설정하여 임베딩 출력\n",
     "\n",
     "\n",
@@ -220,6 +281,20 @@
     "\n",
     "    submit.to_csv(OUTFILE1+str(seed)+OUTFILE2, index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
