feat: codellama 20 division

--- a/code_similarity/codellama_pipeline_1.ipynb
+++ b/code_similarity/codellama_pipeline_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,13 +11,13 @@
      "text": [
       "/home/leadawon5/decs_jupyter_lab/venvs311/llama2venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Loading checkpoint shards:   0%|                          | 0/2 [00:00<?, ?it/s]"
+      "Loading checkpoint shards: 100%|██████████████████| 2/2 [00:06<00:00,  3.10s/it]\n"
      ]
     }
    ],
    "source": [
     "import os\n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] = '0,1'\n",
+    "os.environ['CUDA_VISIBLE_DEVICES'] = '0'\n",
     "\n",
     "\n",
     "from transformers import AutoTokenizer\n",
@@ -39,9 +39,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Truncation was not explicitly activated but `max_length` is provided a specific value, please use `truncation=True` to explicitly truncate examples to max length. Defaulting to 'longest_first' truncation strategy. If you encode pairs of sequences (GLUE-style) with the tokenizer you can select this strategy more precisely by providing a specific strategy to `truncation`.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pipeline start!!!\n",
+      "Result: What do you need?\n",
+      "\n",
+      "### User Message\n"
+     ]
+    }
+   ],
    "source": [
     "input_text = \"\"\"\n",
     "### System Prompt\n",
@@ -92,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,20 +139,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "TODAY = \"2024_03_08\""
+    "TODAY = \"2024_03_10\"\n",
+    "COUNT = 2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|                                                 | 0/29750 [00:00<?, ?it/s]/home/leadawon5/decs_jupyter_lab/venvs311/llama2venv/lib/python3.11/site-packages/transformers/pipelines/base.py:1157: UserWarning: You seem to be using the pipelines sequentially on GPU. In order to maximize efficiency please use a dataset\n",
+      "  warnings.warn(\n",
+      "  3%|█                                    | 855/29750 [05:43<3:22:41,  2.38it/s]"
+     ]
+    }
+   ],
    "source": [
-    "with open(f'./bigdata/llama2/{TODAY}_b4bert_result_part1.txt', 'w') as file:\n",
+    "with open(f'./bigdata/llama2_submit/{TODAY}_b4bert_result_part{COUNT}.txt', 'w') as file:\n",
     "    pass\n",
     "\n",
     "\n",
@@ -179,19 +208,19 @@
     "            result_text = seq['generated_text'][len(inputtexts):]\n",
     "            #result_text = seq['generated_text']\n",
     "            predictions.append(result_text)\n",
-    "            with open(f'./bigdata/llama2/{TODAY}_b4bert_result_part1.txt', 'a') as file:\n",
+    "            with open(f'./bigdata/llama2_submit/{TODAY}_b4bert_result_part{COUNT}.txt', 'a') as file:\n",
     "                file.write(f'{index} : {result_text}\\n')\n",
     "    return predictions\n",
     "\n",
     "# 예제 사용\n",
-    "test_data = pd.read_csv(\"./bigdata/test_part1.csv\")\n",
+    "test_data = pd.read_csv(F\"./bigdata/llama2/test_part{COUNT}.csv\")\n",
     "# 모델과 tokenizer가 정의되어 있어야 합니다.\n",
     "predictions = predict(model, tokenizer, test_data)\n",
     "\n",
     "# 결과를 제출 파일로 저장\n",
-    "submission = pd.read_csv('./bigdata/sample_submission_part1.csv')\n",
+    "submission = pd.read_csv(f'./bigdata/llama2/sample_submission_part{COUNT}.csv')\n",
     "submission['similar'] = predictions\n",
-    "submission.to_csv(f'./bigdata/llama2/{TODAY}_predictions_b4bert_submit_part1.csv', index=False)"
+    "submission.to_csv(f'./bigdata/llama2_submit/{TODAY}_predictions_b4bert_submit_part{COUNT}.csv', index=False)"
    ]
   },
   {
