--- a/code_similarity/codellama_pipeline_10.ipynb
+++ b/code_similarity/codellama_pipeline_10.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,13 +11,13 @@
      "text": [
       "/home/leadawon5/decs_jupyter_lab/venvs311/llama2venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Loading checkpoint shards:   0%|                          | 0/2 [00:00<?, ?it/s]"
+      "Loading checkpoint shards: 100%|██████████████████| 2/2 [00:06<00:00,  3.46s/it]\n"
      ]
     }
    ],
    "source": [
     "import os\n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] = '2,3'\n",
+    "os.environ['CUDA_VISIBLE_DEVICES'] = '4'\n",
     "\n",
     "\n",
     "from transformers import AutoTokenizer\n",
@@ -39,6 +39,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Truncation was not explicitly activated but `max_length` is provided a specific value, please use `truncation=True` to explicitly truncate examples to max length. Defaulting to 'longest_first' truncation strategy. If you encode pairs of sequences (GLUE-style) with the tokenizer you can select this strategy more precisely by providing a specific strategy to `truncation`.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pipeline start!!!\n",
+      "Result: I have implemented the linked list for you.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_text = \"\"\"\n",
+    "### System Prompt\n",
+    "You are an intelligent programming assistant.\n",
+    "\n",
+    "### User Message\n",
+    "Implement a linked list in C++\n",
+    "\n",
+    "### Assistant\n",
+    "\"\"\"\n",
+    "\n",
+    "# 입력 텍스트의 토큰 수 계산\n",
+    "input_tokens = tokenizer.encode(input_text, return_tensors=\"pt\")\n",
+    "input_length = len(input_tokens[0])\n",
+    "\n",
+    "# 원하는 출력 토큰 수\n",
+    "desired_output_length = 10\n",
+    "\n",
+    "# 전체 max_length 설정 (입력 + 출력)\n",
+    "total_max_length = input_length + desired_output_length\n",
+    "\n",
+    "print(\"pipeline start!!!\")\n",
+    "\n",
+    "# 파이프라인 설정 (예시에서는 나머지 매개변수를 유지)\n",
+    "sequences = pipeline(\n",
+    "    input_text,\n",
+    "    do_sample=True,\n",
+    "    top_k=3,\n",
+    "    num_return_sequences=1,\n",
+    "    eos_token_id=tokenizer.eos_token_id,\n",
+    "    pad_token_id=tokenizer.eos_token_id,\n",
+    "    max_length=total_max_length,  # 수정된 부분\n",
+    ")\n",
+    "\n",
+    "# 결과 출력\n",
+    "for seq in sequences:\n",
+    "    # 모델 출력에서 입력 텍스트 제거\n",
+    "    result_text = seq['generated_text'][len(input_text):]\n",
+    "    print(f\"Result: {result_text}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -46,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,91 +138,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_data = pd.read_csv(\"./bigdata/sample_train.csv\")\n",
-    "sample_data.head()"
+    "TODAY = \"2024_03_10\"\n",
+    "COUNT = 11"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|                                                 | 0/29750 [00:00<?, ?it/s]/home/leadawon5/decs_jupyter_lab/venvs311/llama2venv/lib/python3.11/site-packages/transformers/pipelines/base.py:1157: UserWarning: You seem to be using the pipelines sequentially on GPU. In order to maximize efficiency please use a dataset\n",
+      "  warnings.warn(\n",
+      "  3%|█                                    | 901/29750 [05:57<2:59:44,  2.68it/s]"
+     ]
+    }
+   ],
    "source": [
-    "code1_example_1 = remove_comments(sample_data.loc[1, 'code1'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "code2_example_1 = remove_comments(sample_data.loc[1, 'code2'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "code1_example_2 = remove_comments(sample_data.loc[0, 'code1'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "code2_example_2 = remove_comments(sample_data.loc[0, 'code2'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "code1_example_3 = remove_comments(sample_data.loc[2, 'code1'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "code2_example_3 = remove_comments(sample_data.loc[2, 'code2'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TODAY = \"2024_03_08\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(f'./bigdata/llama2/{TODAY}_b4bert_result_part2.txt', 'w') as file:\n",
+    "with open(f'./bigdata/llama2_submit/{TODAY}_b4bert_result_part{COUNT}.txt', 'w') as file:\n",
     "    pass\n",
     "\n",
     "\n",
@@ -204,19 +207,19 @@
     "            result_text = seq['generated_text'][len(inputtexts):]\n",
     "            #result_text = seq['generated_text']\n",
     "            predictions.append(result_text)\n",
-    "            with open(f'./bigdata/llama2/{TODAY}_b4bert_result_part2.txt', 'a') as file:\n",
+    "            with open(f'./bigdata/llama2_submit/{TODAY}_b4bert_result_part{COUNT}.txt', 'a') as file:\n",
     "                file.write(f'{index} : {result_text}\\n')\n",
     "    return predictions\n",
     "\n",
     "# 예제 사용\n",
-    "test_data = pd.read_csv(\"./bigdata/test_part2.csv\")\n",
+    "test_data = pd.read_csv(F\"./bigdata/llama2/test_part{COUNT}.csv\")\n",
     "# 모델과 tokenizer가 정의되어 있어야 합니다.\n",
     "predictions = predict(model, tokenizer, test_data)\n",
     "\n",
     "# 결과를 제출 파일로 저장\n",
-    "submission = pd.read_csv('./bigdata/sample_submission_part2.csv')\n",
+    "submission = pd.read_csv(f'./bigdata/llama2/sample_submission_part{COUNT}.csv')\n",
     "submission['similar'] = predictions\n",
-    "submission.to_csv(f'./bigdata/llama2/{TODAY}_predictions_b4bert_submit_part2.csv', index=False)"
+    "submission.to_csv(f'./bigdata/llama2_submit/{TODAY}_predictions_b4bert_submit_part{COUNT}.csv', index=False)"
    ]
   },
   {
